# hydrogr

./: .bumpversion.cfg  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  HISTORY.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/actions/build_and_test/: action.yml
.github/workflows/: CI.yml  build.yml  build_all.yml  build_and_publish_release.yml  build_and_test.yml  on_push.yml  on_release.yml  publish.yml
data/: L0123001.csv  L0123001.pkl  L0123002.csv  L0123003.csv  L0123003.pkl
example/: calibrating_gr4j.ipynb  calibrating_gr4j.py  gr1a.ipynb  gr4j.ipynb  gr6j.ipynb  simple_gr1a_run.py  simple_gr2m_run.py  simple_gr4h_run.py  simple_gr4j_run.py  simple_gr5j_run.py  simple_gr6j_run.py
hydrogr/: __init__.py  gr1a.py  gr2m.py  gr4h.py  gr4j.py  gr5j.py  gr6j.py  input_data.py  model_interface.py  plot_tools.py
hydrogr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hydrogr/models/: __init__.py  frun_CEMANEIGE.f  frun_GR1A.f90  frun_GR2M.f90  frun_GR4H.f90  frun_GR4J.f90  frun_GR5J.f90  frun_GR6J.f90  gr1a.pyf  gr2m.pyf  gr4h.pyf  gr4j.pyf  gr5j.pyf  gr6j.pyf  utils_D.f90  utils_H.f90
python/hydrogr/: __init__.py  gr1a.py  gr2m.py  gr4h.py  gr4j.py  gr5j.py  gr6j.py  input_data.py  model_interface.py
python/test/: conftest.py  test_model_gr1a.py  test_model_gr2m.py  test_model_gr4h.py  test_model_gr4j.py  test_model_gr5j.py  test_model_gr6j.py  test_model_inputs.py
src/: gr1a.rs  gr2m.rs  gr4h.rs  gr4j.rs  gr5j.rs  gr6j.rs  lib.rs  s_curves.rs  tests.rs
test/: conftest.py  test_model_gr1a.py  test_model_gr2m.py  test_model_gr4h.py  test_model_gr4j.py  test_model_gr5j.py  test_model_gr6j.py  test_model_inputs.py
