[project]
name = "hydrogr"
description = "Hydrogr is a Python package that implement GR hydrological models in Rust"
authors = [ {name = "SimonDelmas", email = "delmas.simon@gmail.com"} ]
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
"Homepage" = "https://github.com/SimonDelmas/hydrogr"

dependencies = [
    "numpy>=1.13.3",
    "pandas>=0.20.3"
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.maturin]
python-source = "python"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"