[project]
name = "hydrogr"
version = "1.1.0"
description = "Hydrogr is a Python package that implement GR hydrological models in Rust"
authors = [ {name = "SimonDelmas", email = "delmas.simon@gmail.com"} ]
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.13.3",
    "pandas>=0.20.3"
]

[project.urls]
"homepage" = "https://github.com/SimonDelmas/hydrogr"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "hydrogr._hydrogr"
features = ["pyo3/extension-module"]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.1.2",
    "pytest>=8.3.1",
]