[project]
name = "hydrogr"
version = "1.2.1"
description = "Hydrogr is a Python package that implement GR hydrological models in Rust"
authors = [ {name = "SimonDelmas", email = "delmas.simon@gmail.com"} ]
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>2.2.0",
    "pandas>=2.2.0"
]

[project.urls]
"homepage" = "https://github.com/SimonDelmas/hydrogr"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "hydrogr._hydrogr"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
]
